@@ -213,6 +213,7 @@ struct Config
 	bool no_heartbeat;
 	int band_bin;
 	int col_bin;
+	size_t file_buffer_size;
 
 	enum {
 		makedb = 0, blastp = 1, blastx = 2, view = 3, help = 4, version = 5, getseq = 6, benchmark = 7, random_seqs = 8, compare = 9, sort = 10, roc = 11, db_stat = 12, model_sim = 13,
