@@ -19,11 +19,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include <algorithm>
 #include <string.h>
 #include "input_stream_buffer.h"
+#include "../../basic/config.h"
 
 using std::make_pair;
 
 InputStreamBuffer::InputStreamBuffer(StreamEntity *prev):
 	StreamEntity(prev),
+	buf_(new char[config.file_buffer_size]),
 	putback_count_(0)
 {
 }
@@ -51,11 +53,11 @@ pair<const char*, const char*> InputStreamBuffer::read()
 		putback_count_ = 0;
 	}
 	else
-		n = prev_->read(buf_, BUF_SIZE);
-	return make_pair(buf_, buf_ + n);
+		n = prev_->read(buf_.get(), config.file_buffer_size);
+	return make_pair(buf_.get(), buf_.get() + n);
 }
 
 void InputStreamBuffer::putback(const char* p, size_t n) {
-	std::copy(p, p + n, buf_);
+	std::copy(p, p + n, buf_.get());
 	putback_count_ = n;
 }
