@@ -16,25 +16,21 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ****/
 
-#ifndef INPUT_STREAM_BUFFER_H_
-#define INPUT_STREAM_BUFFER_H_
-
+#pragma once
 #include <utility>
+#include <memory>
 #include "stream_entity.h"
 
 struct InputStreamBuffer : public StreamEntity
 {
 	InputStreamBuffer(StreamEntity* prev);
-	virtual void rewind();
-	virtual void seek(size_t pos);
-	virtual void seek_forward(size_t n);
-	virtual pair<const char*, const char*> read();
+	virtual void rewind() override;
+	virtual void seek(size_t pos) override;
+	virtual void seek_forward(size_t n) override;
+	virtual pair<const char*, const char*> read() override;
 	virtual void putback(const char* p, size_t n) override;
 private:
-	enum { BUF_SIZE = 4096 };
-
-	char buf_[BUF_SIZE];
+	
+	std::unique_ptr<char> buf_;
 	size_t putback_count_;
 };
-
-#endif
