@@ -88,7 +88,7 @@ struct Serializer : public Consumer
 
 	Serializer& operator<<(const vector<string> &v)
 	{
-		*this << (int)v.size();
+		*this << (uint32_t)v.size();
 		for (vector<string>::const_iterator i = v.begin(); i < v.end(); ++i)
 			*this << *i;
 		return *this;
